--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -6,7 +6,10 @@ templateClass: tmpl-post
 
 {{ content | safe }}
 
-<hr>
+
+<div class="post-end">
+  <hr class="post-end-line" />
+</div>
 <ul>
   {%- set nextPost = collections.posts | getNextCollectionItem(page) %}
   {%- if nextPost %}<li>Next: <a href="{{ nextPost.url | url }}">{{ nextPost.data.title }}</a></li>{% endif %}
