added google analytics

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -13,6 +13,15 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{{ '/icons/favicon-32x32.png' | url }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ '/icons/favicon-16x16.png' | url }}">
     <link rel="manifest" href="{{ '/icons/site.webmanifest' | url }}">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W6JB09KX1G"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-W6JB09KX1G');
+    </script>
   </head>
   <body>
     <div class="container">
