Updated projects info
Signed-off-by: Shashank Bairy R <shashank.bairy04@gmail.com>

--- a/css/index.css
+++ b/css/index.css
@@ -278,7 +278,7 @@ a[href].direct-link:focus:visited,
 /* List */
 
 .list-item {
-  padding-bottom: 1.5rem;
+  padding-top: 0.5rem;
 }
 
 .list-title-container {
